Implement removing groups